--- a/main.less
+++ b/main.less
@@ -1,4 +1,6 @@
 @recognizerBlue: rgb(50,205,220);
+@recognizerRed: rgb(249,29,43);
+@recognizerYellow: rgb(254,199,0);
 
 #status-indicator-recognizer {
 	&:before {
@@ -9,11 +11,136 @@
 		margin-right: 7px;
 		border-radius: 50%;
 	}
+	&.is-error:before {
+		background: @recognizerRed;
+		box-shadow: 0 0 4px @recognizerRed;
+	}
+	&.is-inactive:before {
+		border: 1px solid rgba(0,0,0,0.2);
+	}
 	&.is-active:before {
 		background: @recognizerBlue;
 		box-shadow: 0 0 4px @recognizerBlue;
 	}
-	&.is-inactive {
-		border: 1px solid rgba(0,0,0,0.2);
+	&.is-connecting:before,
+	&.is-out-of-snyc:before,
+	&.is-loading-agents:before {
+		background: @recognizerYellow;
+		box-shadow: 0 0 4px @recognizerYellow;
+	}
+}
+
+#recognizer-panel {
+	position: absolute;
+	top: 0;
+	right: 30px;
+	width: 100px;
+	height: 100%;
+	box-shadow: -2px 0 5px rgba(0,0,0,0.1), -1px 0 0 rgba(0,0,0,0.06);
+	border-right: 1px solid rgba(0,0,0,0.8);
+	background: #fff;
+	z-index: 20;
+}
+
+.rp_header {
+	background: linear-gradient(to bottom, darken(@recognizerBlue, 5%), darken(@recognizerBlue, 15%));
+	line-height: 15px;
+	padding: 7px 10px;
+	color: #fff;
+	box-shadow: inset 0 1px rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
+}
+.rp_function {
+	font-size: 13px;
+	font-weight: 500;
+	margin-right: 5px;
+}
+.rp_file {
+	font-size: 11px;
+	font-weight: 500;
+	color: rgba(255,255,255,0.9);
+}
+
+.rp_section {
+	position: relative;
+}
+.rp_section_header {
+	display: block;
+	background: linear-gradient(to bottom, rgba(0,0,0,0.02), rgba(0,0,0,0.05));
+	box-shadow: inset 0 1px rgba(255,255,255,1), inset 0 -1px 0 rgba(0,0,0,0.04);
+	padding: 5px 10px;
+	color: inherit;
+
+	.rp_section_title {
+		font-size: 12px;
+		font-weight: 500;
+	}
+	.rp_section_showhide {
+		position: absolute;
+		right: 7px;
+		margin-top: 2px;
+		display: inline-block;
+		padding: 0 5px;
+		color: #999;
+	}
+	&.is-active .rp_section_showhide {
+		color: @recognizerBlue;
+	}
+	&:hover {
+		background: linear-gradient(to bottom, rgba(0,0,0,0.04), rgba(0,0,0,0.07));
+		text-decoration: none;
+
+		.rp_section_showhide {
+			color: #666;
+		}
+	}
+}
+
+.rp_log {
+	width: 100%;
+	font-size: 12px;
+	position: relative;
+
+	td {
+		padding: 3px;
+
+		&:first-child {
+			padding-left: 10px;
+		}
+		&:last-child {
+			padding-right: 10px;
+			text-align: right;
+		}
+	}
+}
+.rp_log_head {
+	height: 22px;
+
+	td {
+		color: #999;
+		border-bottom: 1px solid rgba(0,0,0,0.04);
+	}
+}
+.rp_log_time {
+	td:first-child {
+		font-size: 12px;
+		font-weight: 500;
+		text-align: left;
+		padding-top: 7px;
+		position: relative;
+
+		&:before {
+			content: "";
+			position: absolute;
+			top: 50%;
+			left: 0;
+			width: 4px;
+			height: 1px;
+			border-bottom: 1px solid rgba(0,0,0,0.2);
+		}
+	}
+}
+.rp_log_calls {
+	td:first-child {
+		color: #999;
 	}
 }
