Add custom tracer

--- a/main.less
+++ b/main.less
@@ -23,7 +23,7 @@
 		box-shadow: 0 0 4px @recognizerBlue;
 	}
 	&.is-connecting:before,
-	&.is-out-of-snyc:before,
+	&.is-out-of-sync:before,
 	&.is-loading-agents:before {
 		background: @recognizerYellow;
 		box-shadow: 0 0 4px @recognizerYellow;
