Disable hiding of some logs

--- a/main.less
+++ b/main.less
@@ -237,7 +237,8 @@
 	border-bottom: 1px solid rgba(0,0,0,0.04);
 
 	tr {
-		display: none;
+		// display: none;
+		dispaly: table-row;
 
 		&:nth-child(-n+3) {
 			display: table-row;
@@ -245,7 +246,8 @@
 	}
 }
 th.rw_time-base {
-	font-size: 0 !important;
+	// font-size: 0 !important;
+	font-size: 12px !important;
 	font-weight: 600;
 	text-align: left;
 	padding-left: 12px;
