--- a/main.less
+++ b/main.less
@@ -148,35 +148,9 @@
 .recognizer-widget {
 	font-family: "Source Sans Pro";
 	margin: 10px 20px;
-	border-radius: 3px;
+	border-radius: 2px;
 	background: #fff;
-	box-shadow: inset 1px 1px 0 rgba(0,0,0,0.05), inset -1px -1px 0 rgba(0,0,0,0.05), inset 0 1px 3px rgba(0,0,0,0.1);
-	// overflow: scroll;
-
-	&.has-scroll-up .rw_table-scroll {
-		box-shadow: inset 0 2px 6px rgba(0,0,0,0.2);
-	}
-	// &.has-scroll-up:before {
-	// 	content: "";
-	// 	display: block;
-	// 	position: absolute;
-	// 	top: -3px;
-	// 	left: 0;
-	// 	width: 100%;
-	// 	height: 3px;
-	// 	box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-	// }
-
-	&.has-scroll-up:before {
-		content: "";
-		display: block;
-		position: absolute;
-		top: 100%;
-		left: 0;
-		width: 100%;
-		height: 0;
-		box-shadow: 0 -2px 6px rgba(0,0,0,0.2);
-	}
+	box-shadow: inset 1px 1px 0 rgba(0,0,0,0.1), inset -1px -1px 0 rgba(0,0,0,0.1);
 }
 .rw_scroll-container {
 	position: absolute;
@@ -190,7 +164,7 @@
 		left: 0;
 		width: 100%;
 		height: 5px;
-		box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+		box-shadow: 0 1px 4px rgba(0,0,0,0.2);
 	}
 	&.has-scroll-down:after {
 		content: "";
@@ -200,7 +174,7 @@
 		left: 0;
 		width: 100%;
 		height: 5px;
-		box-shadow: 0 -2px 6px rgba(0,0,0,0.2);
+		box-shadow: 0 -1px 4px rgba(0,0,0,0.2);
 	}
 }
 .rw_scroll-content {
