--- a/main.less
+++ b/main.less
@@ -245,3 +245,16 @@ th.rw_warnings {
 		color: @recognizerYellow;
 	}
 }
+
+
+.recognizer-counter {
+	background: @recognizerBlue;
+	color: #fff;
+	font-weight: bold;
+	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2), 0 0 3px rgb(50,205,220,0.3);
+	border-radius: 2px;
+	display: inline-block;
+	margin: 0 4px;
+	padding: 0 4px;
+	line-height: 16px;
+}
