--- a/main.less
+++ b/main.less
@@ -251,7 +251,7 @@ th.rw_warnings {
 	background: @recognizerBlue;
 	color: #fff;
 	font-weight: bold;
-	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2), 0 0 3px rgb(50,205,220,0.3);
+	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2), 0 0 3px rgba(50,205,220,0.3);
 	border-radius: 2px;
 	display: inline-block;
 	margin: 0 4px;
