--- a/main.less
+++ b/main.less
@@ -263,10 +263,10 @@ th.rw_warnings {
 
 	&:hover,
 	&:focus {
-		background: darken(@recognizerBlue, 7%);
+		background: darken(@recognizerBlue, 8%);
 		text-decoration: none;
 		color: #fff;
-		box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2), 0 0 3px rgba(50,205,220,1);
+		// box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2), 0 0 3px rgba(50,205,220,1);
 	}
 	&.is-active {
 		color: @recognizerBlue;
