Adjust widget position

--- a/main.less
+++ b/main.less
@@ -148,6 +148,7 @@
 .recognizer-widget {
 	font-family: "Source Sans Pro";
 	margin: 10px 20px;
+	margin-left: 87px;
 	border-radius: 2px;
 	background: #fff;
 	box-shadow: inset 1px 1px 0 rgba(0,0,0,0.1), inset -1px -1px 0 rgba(0,0,0,0.1);
