Highlight what can be probed, currently function calls

--- a/main.less
+++ b/main.less
@@ -274,3 +274,11 @@ th.rw_warnings {
 		box-shadow: inset 1px 1px 0 rgba(0,0,0,0.15), inset -1px -1px 0 rgba(0,0,0,0.15);
 	}
 }
+
+.recognizer-probe {
+	background: #55ee22;
+
+	&:hover {
+		background: #000;
+	}
+}
