Small debugging adjustments, todos

--- a/main.less
+++ b/main.less
@@ -288,6 +288,7 @@ th.rw_warnings {
 	border-radius: 2px;
 	margin: 0 4px;
 	padding: 0 3px;
+	pointer-events: all;
 
 	.console-user-command-result {
 		display: inline-block;
