--- a/main.less
+++ b/main.less
@@ -339,7 +339,7 @@ th.rw_warnings {
 	padding: 0 5px;
 	pointer-events: all;
 	-webkit-transform: translateY(1px);
-	max-width: 100px;
+//	max-width: 100px;
 	overflow: hidden;
 
 	// &:hover {
