--- a/main.less
+++ b/main.less
@@ -343,6 +343,17 @@ th.rw_warnings {
 	}
 }
 
+.recognizer-probe-tooltip {
+	position: absolute;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	background: #fff;
+	box-shadow: 1px 1px rgba(0,0,0,0.05), -1px -1px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.3);
+	border-radius: 2px;
+	padding: 15px 10px;
+}
+
 .recognizer-probe-widget {
 	display: inline-block;
 	border: 1px solid rgba(0,0,0,0.15);
