--- a/main.less
+++ b/main.less
@@ -352,6 +352,7 @@ th.rw_warnings {
 	box-shadow: 1px 1px rgba(0,0,0,0.05), -1px -1px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.3);
 	border-radius: 2px;
 	padding: 15px 10px;
+	overflow: scroll;
 }
 
 .recognizer-probe-widget {
