--- a/main.less
+++ b/main.less
@@ -349,10 +349,28 @@ th.rw_warnings {
 	top: 0;
 	left: 0;
 	background: #fff;
-	box-shadow: 1px 1px rgba(0,0,0,0.05), -1px -1px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.3);
+	box-shadow: 1px 1px rgba(0,0,0,0.05), -1px -1px rgba(0,0,0,0.05), 0 1px 3px rgba(0,0,0,0.3);
 	border-radius: 2px;
-	padding: 15px 10px;
-	overflow: scroll;
+
+	&::before {
+		content: '';
+		display: block;
+		position: absolute;
+		background: #fff;
+		top: -3px;
+		left: 50%;
+		margin-left: -3px;
+		width: 6px;
+		height: 6px;
+		box-shadow: -1px -1px rgba(0,0,0,0.1);
+		-webkit-transform: rotate(45deg);
+	}
+	.console-message {
+		padding: 7px 10px;
+		box-sizing: border-box;
+		height: 100%;
+		overflow: scroll;
+	}
 }
 
 .recognizer-probe-widget {
