--- a/main.less
+++ b/main.less
@@ -163,7 +163,7 @@
 	font-family: "Source Sans Pro";
 	margin: 10px 20px;
 	margin-left: 87px;
-	background: #fff;
+	background: #f8f8f8;
 }
 .rw_scroll-container {
 	position: absolute;
@@ -270,7 +270,7 @@ th.rw_warnings {
 	color: #fff;
 	font-weight: bold;
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2), 0 0 3px rgba(50,205,220,0.3);
-	border-radius: 2px;
+	border-radius: 50%;
 	display: inline-block;
 	margin: 0 4px;
 	padding: 0 5px;
@@ -288,7 +288,7 @@ th.rw_warnings {
 	&.is-active {
 		color: @recognizerBlue;
 		background: #fff;
-		box-shadow: inset 1px 1px 0 rgba(0,0,0,0.15), inset -1px -1px 0 rgba(0,0,0,0.15);
+		box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.15), inset 0 0 2px rgba(0,0,0,0.4);
 	}
 }
 
