--- a/main.less
+++ b/main.less
@@ -161,13 +161,13 @@
 
 .recognizer-widget {
 	font-family: "Source Sans Pro";
-	margin: 10px 20px;
-	margin-left: 87px;
+	margin: 10px;
 	background: #f8f8f8;
 }
 .rw_scroll-container {
 	position: absolute;
 	height: 100%;
+	width: calc(100% - 20px);
 	border-radius: 2px;
 	box-shadow: inset 1px 1px 0 rgba(0,0,0,0.1), inset -1px -1px 0 rgba(0,0,0,0.1);
 
@@ -270,7 +270,7 @@ th.rw_warnings {
 	color: #fff;
 	font-weight: bold;
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2), 0 0 3px rgba(50,205,220,0.3);
-	border-radius: 50%;
+	border-radius: 10px;
 	display: inline-block;
 	margin: 0 4px;
 	padding: 0 5px;
